--- a/common/src/main/resources/assets/iris/lang/ko_kr.json
+++ b/common/src/main/resources/assets/iris/lang/ko_kr.json
@@ -6,9 +6,13 @@
   "iris.shaders.debug.disabled": "디버그 모드가 비활성화되었습니다.",
   "iris.shaders.debug.failure": "이 컴퓨터는 디버그 기능을 지원하지 않습니다.",
   "iris.shaders.debug.restart": "디버그 콘텍스트가 없습니다. 다시 시작하여 디버그 모드를 활성화하십시오.",
-  "iris.shaders.ssbofailure": "이 GPU는 셰이더가 요구하는 기능(SSBO)을 지원하지 않습니다. 셰이더가 정상적으로 동작하지 않을 것입니다.",
+  "iris.shaders.debug.restartNoDebug": "셰이더 디버깅이 활성화되었습니다. OpenGL 디버깅은 NeoForge에서 지원되지 않습니다.",
+  "iris.load.failure.shader": "셰이더 팩을 불러오지 못하였습니다! 셰이더 개발자에게 오류를 보고하십시오. ",
+  "iris.load.failure.generic": "Iris에서 셰이더를 불러오는 동안 문제가 발생하였습니다. Iris 개발자에게 이 문제를 보고하십시오. ",
+  "iris.shaders.ssbofailure": "이 GPU는 셰이더가 요구하는 기능(SSBO)을 지원하지 않습니다. 셰이더가 제대로 작동하지 않을 수 있습니다.",
   "iris.keybind.reload": "셰이더 새로고침",
   "iris.keybind.shaderPackSelection": "셰이더 팩 선택 창",
+  "iris.keybind.wireframe": "와이어프레임(싱글플레이 전용)",
   "iris.keybind.toggleShaders": "셰이더 전환",
   "iris.keybinds": "Iris",
   "iris.shaders.reloaded.failure": "셰이더를 새로고침하지 못하였습니다: %s",
@@ -44,11 +48,11 @@
   "options.iris.shaderPackOptions.importedSettings": "\"%s\" 파일에서 셰이더 설정을 가져왔습니다.",
   "options.iris.shaders.disabled": "셰이더: 비활성화됨",
   "options.iris.shaders.enabled": "셰이더: 활성화됨",
-  "options.iris.shaders.nonePresent": "셰이더: 팩이 없습니다",
+  "options.iris.shaders.nonePresent": "셰이더: 팩 없음",
   "options.iris.back": "뒤로 가기",
   "options.iris.reset": "초기화",
   "options.iris.reset.tooltip": "모든 옵션이 초기화됩니다. 계속하시겠습니까?",
-  "options.iris.reset.tooltip.holdShift": "[Shift] 키를 누르고 클릭하여 초기화",
+  "options.iris.reset.tooltip.holdShift": "Shift 키를 누른 상태에서 클릭하여 초기화",
   "options.iris.importSettings.tooltip": "설정을 파일에서 가져오기",
   "options.iris.exportSettings.tooltip": "설정을 파일로 내보내기",
   "options.iris.mustDisableFullscreen": "전체 화면 모드를 해제하십시오.",
@@ -59,6 +63,8 @@
   "options.iris.shadowDistance.enabled": "그림자가 표시되는 최대 거리를 조정할 수 있습니다. 이 거리보다 멀리 있는 개체와 지형은 그림자를 표시하지 않습니다. 그림자 거리를 줄이면 성능을 향상시킬 수 있습니다.",
   "options.iris.shadowDistance.disabled": "현재 사용하고 있는 셰이더 팩은 이미 그림자 렌더링 거리가 설정되어 있어 바꿀 수 없습니다.",
   "options.iris.shadowDistance.sodium_tooltip": "그림자 렌더링 거리는 잠재적으로 섀도 패스에서 지형을 렌더링할 수 있는 거리를 제어합니다. 이를 낮게 설정하면 지형이 덜 렌더링되지만 프레임레이트를 향상시킬 수 있습니다. 그림자 렌더링 거리를 명시적으로 지정하는 셰이더 팩을 사용하면 이 설정을 바꿀 수 없습니다. 실제로 그림자가 표시되는 범위는 렌더링 거리 설정으로 제한됩니다.",
+  "options.iris.colorSpace": "색 공간",
+  "options.iris.colorSpace.sodium_tooltip": "화면을 변환할 색 공간입니다. 셰이더 팩 위에서 작동합니다. 확실하지 않은 경우 sRGB를 사용하십시오.",
   "options.iris.gui.hide": "GUI 숨기기",
   "options.iris.gui.show": "GUI 보이기",
   "pack.iris.select.title": "선택",
